# pg-mcp-client

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
client/: app.py  config.py  middleware.py
client/routes/: home.py  query.py  settings.py
client/services/: agent.py
client/templates/: application.html.jinja2  index.html.jinja2  query.html.jinja2  settings.html.jinja2
client/templates/query/: generated_sql.html.jinja2  query_results.html.jinja2  results_table.html.jinja2  results_visualization.html.jinja2
